# resume-tune

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Tailor_Resume.py  ai.py  app.py  ats.py  background.example.md  background.md  config.docker.toml  config.toml  docker-compose.yml  pyproject.toml  resume.py  scoring.py  selection.py  settings.py  skills_selection.py  test_results.txt  totals.json  tracker.py
.github/workflows/: traffic-badges.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  BACKGROUND.md  CONFIGURATION.md  DEVELOPMENT.md  MODIFICATIONS.md  README.md
pages/: 1_Resume_Data.py  2_Applications.py  2_Settings.py  3_Settings.py
scripts/: ats_check.py  e2e_live.py  smoke_test.py
src/resume_tune/: __init__.py  settings.py
src/resume_tune/ats/: ats.py
src/resume_tune/content/: scoring.py
src/resume_tune/llm/: ai.py  selection.py
src/resume_tune/render/: resume.py
src/resume_tune/skills/: skills_map.py  skills_selection.py
src/resume_tune/tracker/: jd_parse.py  paths.py  tracker.py
src/resume_tune/ui/: applications_dashboard.py  background_editor.py  common.py
tests/: test_ai_revision.py  test_ai_sections.py  test_application_paths.py  test_ats.py  test_background_preview.py  test_export.py  test_jd_parse.py  test_persistence.py  test_quality_fit.py  test_resume_sections.py  test_scoring.py  test_selection.py  test_skills_map.py  test_skills_selection.py  test_tracker.py
