[project]
name = "resume-tune"
version = "0.1.0"
description = "Local Streamlit app to tailor resume summary and skills via a local LLM and export DOCX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.32",
    "python-docx>=1.1",
    "openai>=1.30",
    "python-frontmatter>=1.1",
]
