[project]
name = "resume-tune"
version = "0.1.0"
description = "Local Streamlit app to tailor resume summary and skills via a local LLM and export DOCX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit[pdf]>=1.49",
    "python-docx>=1.1",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "mammoth>=1.8",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
